samples/_failures_safe/1761143992_79e25f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bdeba1e0.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_bdeba1e0.c:172:5: error: expected expression at end of input
  172 |     if (read_number(t, token) || read_identifier(t, token) ||
      |     ^~
./samples/SAFE/__tmp_bdeba1e0.c:172:5: error: expected declaration or statement at end of input
